--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+body{
+    background-color: rgb(231, 231, 231);
+}
 .body{
     width: 70pc;
     display: flex;
@@ -13,6 +16,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     font-family: "Poppins", sans-serif;
+    background-color: white;
 }
 .search-bar{
     display: flex;
@@ -130,6 +134,7 @@ nav div{
     -webkit-box-shadow: 0px 2px 20px -7px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 20px -7px rgba(0,0,0,0.75);
     box-shadow: 0px 2px 20px -7px rgba(0,0,0,0.75);
+    background-color: white;
 }
 
 .biography div,
@@ -203,6 +208,7 @@ nav div{
     border-radius: 12px;
     transform: translateX(-50%);
     transition: all 0.3s ease-in-out;
+    background-color: white;
 }
 
 .popup-container {
@@ -285,6 +291,7 @@ nav div{
     gap: 5em;
     justify-content: baseline;
     align-items: center;
+    background-color: white;
 }
 .search-item{
     width: 70%;
@@ -318,6 +325,116 @@ nav div{
     text-align: center;
     margin-left: 110px;
     cursor: pointer;
+}
+.cart_body {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+}
+
+.cart_div {
+    width: 60%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 0;
+    margin: 30px;
+    font-family: "Poppins", sans-serif;
+    border-radius: 10px;
+    box-shadow: 0px 2px 20px -7px rgba(0, 0, 0, 0.75);
+    background-color: white;
+}
+
+.cart_items {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    align-items: center;
+    overflow-y: auto;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.cart_head, .cart_books {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.cart_head {
+    background-color: #e20b0b;
+    color: white;
+    font-weight: bold;
+}
+
+.cart_books {
+    background-color: #f5f5f5;
+    color: #333;
+}
+
+.cart_books h4 {
+    max-width: 120px;
+}
+
+
+.cart_options {
+    width: 90%;
+    height: 45px;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+}
+
+.cart_options button {
+    all: unset;
+    color: white;
+    border-radius: 10px;
+    background-color: #e20b0b;
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.cart_bill {
+    width: 20%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: baseline;
+    margin: 10px;
+    font-family: "Poppins", sans-serif;
+    border-radius: 10px;
+    box-shadow: 0px 2px 20px -7px rgba(0, 0, 0, 0.75);
+    background-color: white;
+    padding: 10px;
+}
+.cart_bill button{
+    all: unset;
+    width: 250px;
+    height: 45px;
+    text-align: center;
+    color: white;
+    background-color: #e20b0b;
+    border-radius: 10px;
+}
+*{
+    margin: 0;
+    padding: 0;
 }
 .footer {
     display: flex;
